Grant Netty native access in the test JVMs
Surefire runs the suite on the module path, so the flag has to name
io.netty.common; the unnamed module alone left Netty's warnings in
every test log.